spark poc